--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,21 +10,21 @@ readme = "README.md"
 repository = "https://github.com/libpasta/libpasta"
 
 [dependencies]
-argon2rs = { version = "0.2" }
-cargon = "*"
+argon2rs = "0.2"
+cargon = "0.0.1"
 clap = "2.23"
 clear_on_drop = "0.2.2"
-data-encoding = "1.2"
-error-chain = "0.11.0-rc.2"
-fastpbkdf2 = "*"
-itertools = "0.6"
-lazy_static = "*"
+data-encoding = "2.0.0"
+error-chain = "0.11.0"
+fastpbkdf2 = "0.1"
+itertools = "0.7"
+lazy_static = "0.2"
 log = "0.3"
 optimization = "0.1"
-num-traits = "*"
+num-traits = "0.1"
 regex = "0.2"
-ring-pwhash = "0.11"
-rpassword = "0.4"
+ring-pwhash = "0.12"
+rpassword = "2.0"
 rust-crypto = "0.2"
 serde = "1.0.2"
 serde_bytes = "0.10"
@@ -32,11 +32,11 @@ serde_derive = "1.0.4"
 serde_json = "1.0.2"
 serde_mcf = "0.1.0"
 serde_yaml = "0.7"
-sys-info = "0.4"
+sys-info = "0.5"
 time = "0.1.36"
 
 [dependencies.ring]
-version = "0.11"
+version = "0.12"
 default-features = false
 features = ["use_heap"]
 
