--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde_yaml = "0.7"
 [dependencies.ring]
 version = "0.12"
 default-features = false
-features = ["use_heap"]
+features = []
 
 [dev-dependencies]
 env_logger = "0.4"
