--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,19 +17,19 @@ data-encoding = "2.0.0"
 error-chain = "0.11.0"
 fastpbkdf2 = "0.1"
 itertools = "0.7"
-lazy_static = "0.2"
+lazy_static = "1.0"
 log = "0.3"
 num-traits = "0.1"
-ring-pwhash = "0.12"
+ring-pwhash = ">= 0.11, < 0.13"
 rpassword = "2.0"
 rust-crypto = "0.2"
 serde = "1.0.2"
 serde_derive = "1.0.4"
-serde_mcf = "0.1.2"
+serde_mcf = "0.1.3"
 serde_yaml = "0.7"
 
 [dependencies.ring]
-version = "0.12"
+version = ">= 0.11, < 0.13"
 default-features = false
 features = []
 
