Expand API functionality to include configuration.

--- a/libpasta-capi/Cargo.toml
+++ b/libpasta-capi/Cargo.toml
@@ -2,11 +2,16 @@
 name = "pasta"
 version = "0.0.5"
 authors = ["Sam Scott <sam.scott89@gmail.com>"]
+build = "build.rs"
+
 
 [dependencies]
 libc = "0.2"
 libpasta = { version = "0.0.5", path = ".." }
 rpassword = "2.0"
+
+[build-dependencies]
+cbindgen = "0.3"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
