Update travis to use `make test`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,7 @@ script:
       if [[ "$TRAVIS_RUST_VERSION" == "nightly" && $CLIPPY ]]; then
         cargo clippy
       fi
-  - |
-      cargo build --verbose --manifest-path libpasta-capi/Cargo.toml
-      (cd libpasta-capi/ctest && sh compile && LD_LIBRARY_PATH=../target/debug ./test)
+  - make test
 
 # Coverage report
 after_success:
