--- a/libpasta-capi/Cargo.toml
+++ b/libpasta-capi/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "pasta"
-version = "0.0.6"
+version = "0.1.0-rc0"
 authors = ["Sam Scott <sam.scott89@gmail.com>"]
 build = "build.rs"
 
 
 [dependencies]
 libc = "0.2"
-libpasta = { version = "0.0.6", path = ".." }
+libpasta = { version = "0.1.0-rc0", path = ".." }
 rpassword = "2.0"
 
 [build-dependencies]
-cbindgen = "0.3"
+cbindgen = "0.4"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
