make fastpbkdf2 dependency optional
Unlike openssl-sys, fastpbkdf2 currently doesn't compile out of the box
on macOS, even after "brew install openssl@1.1". You have to build with
a couple environmental variables specified:
LIBRARY_PATH=/usr/local/opt/openssl@1.1/lib
CFLAGS=-I/usr/local/opt/openssl@1.1/include

I want my software to be super easy to install, and libpasta supports
the same functionality from ring, so use that by default.

(I could duplicate openssl-sys's build.rs logic into fastpbkdf2, or some
trimmed version of it, but this seems simpler and more foolproof.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ argon2rs = "0.2"
 cargon = "0.0.1"
 data-encoding = "2.0.0"
 error-chain = "0.11.0"
-fastpbkdf2 = "0.1"
+fastpbkdf2 = { version = "0.1", optional = true }
 itertools = "0.7"
 lazy_static = "1.0"
 log = "0.4"
