--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libpasta"
-version = "0.1.0-rc0"
+version = "0.1.0"
 authors = ["Sam Scott <me@samjs.co.uk>"]
 categories = ["authentication", "cryptography"]
 description = "All-inclusive password hashing library"
@@ -10,33 +10,38 @@ readme = "README.md"
 repository = "https://github.com/libpasta/libpasta"
 
 [dependencies]
-argon2rs = "0.2"
-cargon = "0.0.1"
-data-encoding = "2.0.0"
-error-chain = "0.11.0"
-fastpbkdf2 = "0.1"
-itertools = "0.7"
-lazy_static = "1.0"
-log = "0.4"
-num-traits = "0.2"
-ring-pwhash = ">= 0.11, < 0.13"
-rpassword = "2.0"
-rust-crypto = "0.2"
-serde = "1.0.2"
-serde_derive = "1.0.4"
+argon2rs = "0.2.5"
+data-encoding = "2.1.2"
+error-chain = "0.12.0"
+fastpbkdf2 = "0.1.0"
+itertools = "0.8.0"
+lazy_static = "1.2.0"
+log = "0.4.6"
+num-traits = "0.2.6"
+rpassword = "2.1.0"
+rust-crypto = "0.2.36"
+serde = { version = "1.0.85", features = ["serde_derive"]}
 serde_mcf = "0.1.3"
-serde_yaml = "0.7"
+serde_yaml = "0.8.8"
+scrypt = "0.2.0"
 
 [dependencies.ring]
-version = ">= 0.11, < 0.13"
+version = "0.14.2"
 default-features = false
-features = []
+features = ["use_heap"]
 
 [dev-dependencies]
-env_logger = "0.5"
-time = "0.1.36"
+cargon = "0.0.1"
+env_logger = "0.6.0"
+time = "0.1.42"
 
 [features]
 bench = []
 long_tests = []
 simd = ["argon2rs/simd"]
+
+[profile.debug]
+opt-level = 2
+
+[profile.test]
+opt-level = 2
