--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,26 +11,26 @@ repository = "https://github.com/libpasta/libpasta"
 
 [dependencies]
 argon2rs = "0.2.5"
-data-encoding = "2.1.2"
-error-chain = "0.12.0"
-lazy_static = "1.2.0"
-log = "0.4.6"
-num-traits = "0.2.6"
-rpassword = "2.1.0"
+data-encoding = "2.3.1"
+error-chain = "0.12.4"
+lazy_static = "1.4.0"
+log = "0.4.11"
+num-traits = "0.2.14"
+rpassword = "5.0.0"
 rust-crypto = "0.2.36"
-serde = { version = "1.0.85", features = ["serde_derive"]}
+serde = { version = "1.0.117", features = ["serde_derive"] }
 serde_mcf = "0.1.3"
-serde_yaml = "0.8.8"
-scrypt = "0.2.0"
+serde_yaml = "0.8.14"
+scrypt = "0.5.0"
 
 [dependencies.ring]
-version = "0.14.2"
+version = "0.16.16"
 default-features = false
-features = ["use_heap"]
+features = ["std"]
 
 [dev-dependencies]
 cargon = "0.0.1"
-env_logger = "0.6.0"
+env_logger = "0.8.2"
 time = "0.1.42"
 
 [features]
@@ -38,7 +38,7 @@ bench = []
 long_tests = []
 simd = ["argon2rs/simd"]
 
-[profile.debug]
+[profile.dev]
 opt-level = 2
 
 [profile.test]
