--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,15 @@ documentation = "https://docs.rs/libpasta"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/libpasta/libpasta"
+edition = "2015"
+
+[lib]
+bench = false
+
+[[bench]]
+name = "bench"
+harness = false
+
 
 [dependencies]
 argon2rs = "0.2.5"
@@ -24,14 +33,14 @@ serde_yaml = "0.8.14"
 scrypt = "0.5.0"
 
 [dependencies.ring]
-version = "0.16.16"
+version = "0.16.18"
 default-features = false
 features = ["std"]
 
 [dev-dependencies]
 cargon = "0.0.1"
+criterion = "0.3.3"
 env_logger = "0.8.2"
-time = "0.1.42"
 
 [features]
 bench = []
