--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,17 +25,13 @@ error-chain = "0.12.4"
 lazy_static = "1.4.0"
 log = "0.4.11"
 num-traits = "0.2.14"
+ring = { version = "0.16.18", default-features = false, features = ["std"] }
 rpassword = "5.0.0"
 rust-crypto = "0.2.36"
 serde = { version = "1.0.117", features = ["serde_derive"] }
 serde_mcf = "0.1.3"
 serde_yaml = "0.8.14"
 scrypt = "0.5.0"
-
-[dependencies.ring]
-version = "0.16.18"
-default-features = false
-features = ["std"]
 
 [dev-dependencies]
 cargon = "0.0.1"
